--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "php": "^7.2.5",
-    "symfony/http-client": "5.1.x-dev"
+    "symfony/http-client": "^4.4 || ^5.0"
   },
   "autoload": {
     "psr-4": {
